# c-practice

./: CMakeLists.txt  Chapter6.h  a.cpp  config.yaml  fact.cpp  factMain.cpp  main.cpp  segTree.cpp  test  test_mysql.cpp
classtest/: CMakeLists.txt  Person.h  test.cpp
http_server/: server.cpp
info/: dayTask.txt  log2  memary  questions.md  words
jdbc/: CMakeLists.txt  JdbcHelper.cpp  JdbcHelper.h
